--- a/tic tac toe/style.css
+++ b/tic tac toe/style.css
@@ -91,7 +91,14 @@ nav ul{
     font-weight: bolder;
 }
 
-
+.line{
+    background-color: black;
+    height: 3px;
+    width: 0;
+    position: absolute;
+    background-color: skyblue;
+    transition: width 1s ease-in-out;
+}
 
 @media screen and (max-width: 950px)
 {
